[package]
name = "cita-sm2"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
serde = "1.0"
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
cita-crypto-trait = { path = "../cita-crypto-trait" }
rlp = { path = "../rlp" }
libsm = { git = "https://github.com/citahub/libsm", rev = "ac323abd3512a9fdb8bfd6cd349a6fc46deb688f" }
efficient-sm2 = { git = "https://github.com/DrewZt/efficient-sm2.git", rev = "23071f4ba443746ecc7c851bad6532d5d8f66134" }

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
